deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gts-website
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/priority: 1
spec:
  backend:
    serviceName: gts-website
    servicePort: 80
